responsive layout bug fix

--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ html, body {
 
   background-color: var(--lightmode-background);
 }
+@media screen and (max-width: 768px) {
+  html, body {
+    overflow-y: auto;
+    overflow-x: hidden;
+  }
+}
 h1 {
    font-family: "Datatype";
    font-size: 12px;
@@ -43,7 +49,7 @@ h2 {
 }
 #all-content {
    display: flex;
-   flex-wrap: wrap;
+   /* flex-wrap: wrap; */
    justify-content: space-between;
    padding: 0px 10px;
    box-sizing: border-box;
@@ -54,7 +60,7 @@ h2 {
 }
 @media screen and (max-width: 768px) {
   #all-content {
-    /* flex-direction: column; */
+    flex-direction: column;
     overflow-y: auto;
     height: auto;
     padding: 24px;
@@ -88,6 +94,8 @@ h2 {
 @media screen and (max-width: 768px) {
   #translation-body {
     width: 100%;
+    min-width: 0;
+    height: auto;
   }
 }
 #panel-compress-cont {
@@ -124,6 +132,9 @@ textarea {
   outline-offset: 2px;
 }
 button {
+   -webkit-appearance: none;
+   appearance: none;
+
    background-color: transparent;
    border: 1px solid var(--lightmode-text);
    /* border-radius: 4px; */
@@ -216,7 +227,6 @@ button:hover {
 #canvas-area {
    display: flex;
    flex-direction: column;
-   min-width: 400px;
    height: 100%;
    min-height: 400px;
    flex: 1;
@@ -226,7 +236,7 @@ button:hover {
 }
 #canvas-container {
    flex: 1;
-   min-width: 250px;
+   /* min-width: 250px; */
    padding: 12px;
    max-height: 100vh;
    height: 100%;  
